[25/8/1/0102]社区接口全部实现，测试通过

--- a/web/web-admin/src/main/resources/application.yml
+++ b/web/web-admin/src/main/resources/application.yml
@@ -24,3 +24,6 @@ minio:
   access-key: minioadmin
   secret-key: minioadmin
   bucket-name: lighthome
+
+springdoc:
+  default-flat-param-object: true
