--- a/web/web-admin/src/main/resources/application.yml
+++ b/web/web-admin/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8080
 spring:
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      database: 0
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:mysql://localhost:3306/lighthome?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2b8
@@ -14,6 +19,9 @@ spring:
       maximum-pool-size: 12 #连接池最大连接数，默认是10
       minimum-idle: 10 #最小空闲连接数量
       pool-name: SPHHikariPool # 连接池名称
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
 mybatis-plus:
   configuration:
