--- a/web/web-app/src/main/resources/application.yml
+++ b/web/web-app/src/main/resources/application.yml
@@ -1,20 +1,43 @@
 server:
   port: 8080
 spring:
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      database: 0
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:mysql://localhost:3306/lighthome?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2b8
     username: root
     password: 1206
     hikari:
-      connection-test-query: SELECT 1 # 自动检测连接
-      connection-timeout: 60000 #数据库连接超时时间,默认30秒
-      idle-timeout: 500000 #空闲连接存活最大时间，默认600000（10分钟）
-      max-lifetime: 540000 #此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
-      maximum-pool-size: 12 #连接池最大连接数，默认是10
-      minimum-idle: 10 #最小空闲连接数量
-      pool-name: SPHHikariPool # 连接池名称
+      connection-test-query: SELECT 1
+      connection-timeout: 60000
+      idle-timeout: 500000
+      max-lifetime: 540000
+      maximum-pool-size: 12
+      minimum-idle: 10
+      pool-name: SPHHikariPool
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+minio:
+  endpoint: http://localhost:9000
+  access-key: minioadmin
+  secret-key: minioadmin
+  bucket-name: lighthome
+
+springdoc:
+  default-flat-param-object: true
+
+aliyun:
+  sms:
+    accessKey-key-id: LTAI5tH831ocSJ2TkxamN1TJ
+    accessKey-key-secret: kFhKyuHlim0SVRTPF4xanJSSIsggRt
+    endpoint: dysmsapi.aliyuncs.com
